[package]
name = "psr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.9"
bevy-inspector-egui = "0.14.0"
bevy_mod_picking = "0.10"
#bevy_atmosphere = { git = "https://github.com/JonahPlusPlus/bevy_atmosphere" }

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"